--- a/html/gallery.html
+++ b/html/gallery.html
@@ -56,7 +56,46 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main class="center">
+      <section class="gallery">
+        <h1>Our Colourful Gallery from visitors!</h1>
+        <p>
+          Take a peek at the joy, creativty, and proud masterpieces from our
+          amazing crafters, — young and young-at-heart.
+        </p>
+        <div class="columns">
+          <div class="column"><img src="../images/MosiacArt.png" alt="" /></div>
+          <div class="column">
+            <img src="../images/WatercolorPainting.png" alt="" />
+          </div>
+          <div class="column"><img src="../images/MosiacArt.png" alt="" /></div>
+          <img src="../images/WatercolorPainting.png" alt="" />
+          <div class="column"><img src="../images/MosiacArt.png" alt="" /></div>
+        </div>
+      </section>
+      <section class="featured">
+        <h2>Want to be featured?</h2>
+        <p>Only workshop attendees can submit — enter your unique code!</p>
+        <form action="/action_page.php">
+          <div>
+            <input type="file" id="myFile" name="filename" />
+          </div>
+          <div>
+            <label for="name">Your name: (optional):</label>
+            <input type="text" id="name" name="name" />
+          </div>
+          <div>
+            <label for="name">Code:</label>
+            <input
+              required
+              type="text"
+              placeholder="Enter your session code!"
+            />
+          </div>
+          <input type="submit" />
+        </form>
+      </section>
+    </main>
     <footer>
       <ul>
         <li>
