--- a/html/testimonals.html
+++ b/html/testimonals.html
@@ -56,7 +56,11 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="testimonal">
+        <h2>Testimonals from attendees</h2>
+      </section>
+    </main>
     <footer>
       <ul>
         <li>
