Testimonals layout completed

--- a/html/gallery.html
+++ b/html/gallery.html
@@ -14,8 +14,7 @@
           ><img
             src="../images/logo.png"
             alt="Craftsvilla logo"
-            srcset=""
-          />Craftsvilla</a
+            srcset="" />Craftsvilla</a
         >
       </div>
       <nav class="main-nav" aria-label="Main navigation">
@@ -39,8 +38,7 @@
             <a href="#">
               <img
                 src="../images/icons/language.png"
-                alt="Language icon"
-              />English
+                alt="Language icon" />English
             </a>
           </li>
           <li id="search">
@@ -76,9 +74,13 @@
       <section class="featured">
         <h2>Want to be featured?</h2>
         <p>Only workshop attendees can submit — enter your unique code!</p>
-        <form action="/action_page.php">
+        <form action="post">
           <div>
-            <input type="file" id="myFile" name="filename" />
+            <input
+              type="file"
+              id="imageUpload"
+              name="imageUpload"
+              accept="image/*" />
           </div>
           <div>
             <label for="name">Your name: (optional):</label>
@@ -89,8 +91,7 @@
             <input
               required
               type="text"
-              placeholder="Enter your session code!"
-            />
+              placeholder="Enter your session code!" />
           </div>
           <input type="submit" />
         </form>
@@ -107,35 +108,30 @@
         <li>
           <a
             href="mailto:contact@craftsvilla.no"
-            aria-label="Craftsvilla phone number"
-          >
+            aria-label="Craftsvilla phone number">
             <img
               src="../images/icons/email.png"
-              alt="Email icon"
-            />contact@craftsvilla.no
+              alt="Email icon" />contact@craftsvilla.no
           </a>
         </li>
         <li>
           <a
             href="https://www.instagram.com"
-            aria-label="Craftsvilla instagram account"
-          >
+            aria-label="Craftsvilla instagram account">
             <img src="../images/icons/instagram.png" alt="Instagram icon" />
           </a>
         </li>
         <li>
           <a
             href="https://www.facebook.com"
-            aria-label="Craftsvilla facebook account"
-          >
+            aria-label="Craftsvilla facebook account">
             <img src="../images/icons/facebook.png" alt="Facebook icon" />
           </a>
         </li>
         <li>
           <a
             href="https://www.twitter.com"
-            aria-label="Craftsvilla twitter account"
-          >
+            aria-label="Craftsvilla twitter account">
             <img src="../images/icons/twitter.png" alt="Twitter icon" />
           </a>
         </li>
