--- a/html/testimonals.html
+++ b/html/testimonals.html
@@ -14,8 +14,7 @@
           ><img
             src="../images/logo.png"
             alt="Craftsvilla logo"
-            srcset=""
-          />Craftsvilla</a
+            srcset="" />Craftsvilla</a
         >
       </div>
       <nav class="main-nav" aria-label="Main navigation">
@@ -39,8 +38,7 @@
             <a href="#">
               <img
                 src="../images/icons/language.png"
-                alt="Language icon"
-              />English
+                alt="Language icon" />English
             </a>
           </li>
           <li id="search">
@@ -57,8 +55,94 @@
       </nav>
     </header>
     <main>
-      <section class="testimonal">
+      <section class="testimonal center">
         <h2>Testimonals from attendees</h2>
+        <p>Hear what our attendees have to say about their experience.</p>
+
+        <div class="columns">
+          <div class="column request">
+            <h3>Testimonal</h3>
+            <p>We’d love to hear what you think!</p>
+            <p>Tell us how your session at Craftsvilla went!</p>
+            <form action="post">
+              <fieldset>
+                <legend>Personalia</legend>
+                <div>
+                  <label for="name">Full name:</label>
+                  <input required type="text" id="name" name="name" />
+                </div>
+                <div>
+                  <label for="email">Email:</label>
+                  <input required type="email" name="email" id="email" />
+                </div>
+              </fieldset>
+              <fieldset>
+                <legend>Anything to add?</legend>
+                <textarea
+                  id="note"
+                  rows="5"
+                  cols="50"
+                  placeholder="Write anything such as questions or inquiries!"></textarea>
+              </fieldset>
+              <input type="button" value="Submit" />
+            </form>
+          </div>
+
+          <div class="columns attendees">
+            <div class="column">
+              <div class="attendee-card">
+                <h1>Michelle Smith</h1>
+                <p>"Amazing time with my children."</p>
+                <img src="../images/person/Person1.png" alt="" srcset="" />
+              </div>
+              <div class="attendee-card">
+                <h1>Ann Roy</h1>
+                <p>"The sessions were fantastic!"</p>
+                <img src="../images/person/Person2.png" alt="" srcset="" />
+              </div>
+              <div class="attendee-card">
+                <h1>Magnus Holloway</h1>
+                <p>"Amazing time at Craftsvilla!"</p>
+                <img src="../images/person/Person3.png" alt="" srcset="" />
+              </div>
+            </div>
+
+            <div class="column">
+              <div class="attendee-card">
+                <h1>Frederick Garza</h1>
+                <p>"Incredible experience!"</p>
+                <img src="../images/person/Person4.png" alt="" srcset="" />
+              </div>
+              <div class="attendee-card">
+                <h1>Magnus Holloway</h1>
+                <p>"I had an amazing time at Craftsvilla!"</p>
+                <img src="../images/person/Person5.png" alt="" srcset="" />
+              </div>
+              <div class="attendee-card">
+                <h1>Magnus Holloway</h1>
+                <p>"I had an amazing time at Craftsvilla!"</p>
+                <img src="../images/person/Person6.png" alt="" srcset="" />
+              </div>
+            </div>
+            <div class="column">
+              <div class="attendee-card">
+                <h1>Magnus Holloway</h1>
+                <p>"I had an amazing time at Craftsvilla!"</p>
+                <img src="../images/person/Person7.png" alt="" srcset="" />
+              </div>
+              <div class="attendee-card">
+                <h1>Magnus Holloway</h1>
+                <p>"I had an amazing time at Craftsvilla!"</p>
+                <img src="../images/person/Person8.png" alt="" srcset="" />
+              </div>
+              <div class="attendee-card">
+                <h1>Magnus Holloway</h1>
+                <p>"I had an amazing time at Craftsvilla!"</p>
+                <img src="../images/person/Person9.png" alt="" srcset="" />
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
@@ -72,35 +156,30 @@
         <li>
           <a
             href="mailto:contact@craftsvilla.no"
-            aria-label="Craftsvilla phone number"
-          >
+            aria-label="Craftsvilla phone number">
             <img
               src="../images/icons/email.png"
-              alt="Email icon"
-            />contact@craftsvilla.no
+              alt="Email icon" />contact@craftsvilla.no
           </a>
         </li>
         <li>
           <a
             href="https://www.instagram.com"
-            aria-label="Craftsvilla instagram account"
-          >
+            aria-label="Craftsvilla instagram account">
             <img src="../images/icons/instagram.png" alt="Instagram icon" />
           </a>
         </li>
         <li>
           <a
             href="https://www.facebook.com"
-            aria-label="Craftsvilla facebook account"
-          >
+            aria-label="Craftsvilla facebook account">
             <img src="../images/icons/facebook.png" alt="Facebook icon" />
           </a>
         </li>
         <li>
           <a
             href="https://www.twitter.com"
-            aria-label="Craftsvilla twitter account"
-          >
+            aria-label="Craftsvilla twitter account">
             <img src="../images/icons/twitter.png" alt="Twitter icon" />
           </a>
         </li>
@@ -115,3 +194,24 @@
 
   <script src="../app.js"></script>
 </html>
+
+<!-- 
+Frederick Garza:
+"I gained valuable skills at Craftsvilla."
+
+Nell Baldwin:
+"I felt inspired throughout the event."
+
+Sharon Bolton:
+"I gained practical insights right away."
+
+Scarlett Donnelly:
+"I had an amazing time learning."
+
+Lauren Wright:
+"I learned so much to enhance my craft."
+
+Danielle Adkins:
+"I enjoyed meeting like-minded people."
+
+-->
