--- a/html/about-us.html
+++ b/html/about-us.html
@@ -14,8 +14,7 @@
           ><img
             src="../images/logo.png"
             alt="Craftsvilla logo"
-            srcset=""
-          />Craftsvilla</a
+            srcset="" />Craftsvilla</a
         >
       </div>
       <nav class="main-nav" aria-label="Main navigation">
@@ -39,8 +38,7 @@
             <a href="#">
               <img
                 src="../images/icons/language.png"
-                alt="Language icon"
-              />English
+                alt="Language icon" />English
             </a>
           </li>
           <li id="search">
@@ -56,7 +54,11 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="center">
+        <h2>About Craftsvilla.</h2>
+      </section>
+    </main>
     <footer>
       <ul>
         <li>
@@ -68,35 +70,30 @@
         <li>
           <a
             href="mailto:contact@craftsvilla.no"
-            aria-label="Craftsvilla phone number"
-          >
+            aria-label="Craftsvilla phone number">
             <img
               src="../images/icons/email.png"
-              alt="Email icon"
-            />contact@craftsvilla.no
+              alt="Email icon" />contact@craftsvilla.no
           </a>
         </li>
         <li>
           <a
             href="https://www.instagram.com"
-            aria-label="Craftsvilla instagram account"
-          >
+            aria-label="Craftsvilla instagram account">
             <img src="../images/icons/instagram.png" alt="Instagram icon" />
           </a>
         </li>
         <li>
           <a
             href="https://www.facebook.com"
-            aria-label="Craftsvilla facebook account"
-          >
+            aria-label="Craftsvilla facebook account">
             <img src="../images/icons/facebook.png" alt="Facebook icon" />
           </a>
         </li>
         <li>
           <a
             href="https://www.twitter.com"
-            aria-label="Craftsvilla twitter account"
-          >
+            aria-label="Craftsvilla twitter account">
             <img src="../images/icons/twitter.png" alt="Twitter icon" />
           </a>
         </li>
