--- a/html/booking.html
+++ b/html/booking.html
@@ -14,8 +14,7 @@
           ><img
             src="../images/logo.png"
             alt="Craftsvilla logo"
-            srcset=""
-          />Craftsvilla</a
+            srcset="" />Craftsvilla</a
         >
       </div>
       <nav class="main-nav" aria-label="Main navigation">
@@ -39,8 +38,7 @@
             <a href="#">
               <img
                 src="../images/icons/language.png"
-                alt="Language icon"
-              />English
+                alt="Language icon" />English
             </a>
           </li>
           <li id="search">
@@ -127,9 +125,7 @@
         <div class="columns center">
           <div class="column">
             <h3>Let's Make Some Art Together!</h3>
-            <p>
-              Choose your activity and your time below - we'll care of the rest.
-            </p>
+            <p>Choose your workshop and class - we'll care of the rest.</p>
             <form action="post">
               <fieldset>
                 <legend>Personalia</legend>
@@ -193,8 +189,7 @@
                   id="note"
                   rows="5"
                   cols="50"
-                  placeholder="Write anything such as questions or inquiries!"
-                ></textarea>
+                  placeholder="Write anything such as questions or inquiries!"></textarea>
               </fieldset>
               <input type="button" value="Submit" />
             </form>
@@ -206,8 +201,7 @@
               width="600"
               height="350"
               frameborder="0"
-              scrolling="no"
-            ></iframe>
+              scrolling="no"></iframe>
           </div>
         </div>
       </section>
@@ -223,35 +217,30 @@
         <li>
           <a
             href="mailto:contact@craftsvilla.no"
-            aria-label="Craftsvilla phone number"
-          >
+            aria-label="Craftsvilla phone number">
             <img
               src="../images/icons/email.png"
-              alt="Email icon"
-            />contact@craftsvilla.no
+              alt="Email icon" />contact@craftsvilla.no
           </a>
         </li>
         <li>
           <a
             href="https://www.instagram.com"
-            aria-label="Craftsvilla instagram account"
-          >
+            aria-label="Craftsvilla instagram account">
             <img src="../images/icons/instagram.png" alt="Instagram icon" />
           </a>
         </li>
         <li>
           <a
             href="https://www.facebook.com"
-            aria-label="Craftsvilla facebook account"
-          >
+            aria-label="Craftsvilla facebook account">
             <img src="../images/icons/facebook.png" alt="Facebook icon" />
           </a>
         </li>
         <li>
           <a
             href="https://www.twitter.com"
-            aria-label="Craftsvilla twitter account"
-          >
+            aria-label="Craftsvilla twitter account">
             <img src="../images/icons/twitter.png" alt="Twitter icon" />
           </a>
         </li>
