About-us section & filled out rest of data in testimonals

--- a/html/about-us.html
+++ b/html/about-us.html
@@ -14,7 +14,8 @@
           ><img
             src="../images/logo.png"
             alt="Craftsvilla logo"
-            srcset="" />Craftsvilla</a
+            srcset=""
+          />Craftsvilla</a
         >
       </div>
       <nav class="main-nav" aria-label="Main navigation">
@@ -38,7 +39,8 @@
             <a href="#">
               <img
                 src="../images/icons/language.png"
-                alt="Language icon" />English
+                alt="Language icon"
+              />English
             </a>
           </li>
           <li id="search">
@@ -55,8 +57,42 @@
       </nav>
     </header>
     <main>
-      <section class="center">
+      <section class="center about-us">
         <h2>About Craftsvilla.</h2>
+        <p>
+          Craftsvilla brings your creative vision to life with engaging
+          workshops led by our passionate team — Raj, Sofia, and Elena.
+          Together, they help you create more than crafts — they help you create
+          memories that last.
+        </p>
+
+        <h2>Meet our talented artist-teachers</h2>
+        <div class="vertical-columns">
+          <div class="column">
+            <img src="../images/person/Artist01.png" alt="" srcset="" />
+            <h3>Raj Kapoor – Mosaic Art</h3>
+            <p>
+              Master the Art of Mosaics with Raj’s expert guidance in creating
+              vibrant, stone-filled masterpieces.
+            </p>
+          </div>
+          <div class="column">
+            <img src="../images/person/Artist02.png" alt="" srcset="" />
+            <h3>Sofia Müller – Watercolor Painting</h3>
+            <p>
+              Immerse yourself in peaceful, fluid creativity as Sofia teaches
+              the delicate art of watercolor painting.
+            </p>
+          </div>
+          <div class="column">
+            <img src="../images/person/Artist03.png" alt="" srcset="" />
+            <h3>Elena Rossi – Canvas Painting</h3>
+            <p>
+              Explore your boldest artistic side with Elena’s dynamic canvas
+              painting workshops that encourage creativity and self-expression.
+            </p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
@@ -70,30 +106,35 @@
         <li>
           <a
             href="mailto:contact@craftsvilla.no"
-            aria-label="Craftsvilla phone number">
+            aria-label="Craftsvilla phone number"
+          >
             <img
               src="../images/icons/email.png"
-              alt="Email icon" />contact@craftsvilla.no
+              alt="Email icon"
+            />contact@craftsvilla.no
           </a>
         </li>
         <li>
           <a
             href="https://www.instagram.com"
-            aria-label="Craftsvilla instagram account">
+            aria-label="Craftsvilla instagram account"
+          >
             <img src="../images/icons/instagram.png" alt="Instagram icon" />
           </a>
         </li>
         <li>
           <a
             href="https://www.facebook.com"
-            aria-label="Craftsvilla facebook account">
+            aria-label="Craftsvilla facebook account"
+          >
             <img src="../images/icons/facebook.png" alt="Facebook icon" />
           </a>
         </li>
         <li>
           <a
             href="https://www.twitter.com"
-            aria-label="Craftsvilla twitter account">
+            aria-label="Craftsvilla twitter account"
+          >
             <img src="../images/icons/twitter.png" alt="Twitter icon" />
           </a>
         </li>
