--- a/html/testimonals.html
+++ b/html/testimonals.html
@@ -14,7 +14,8 @@
           ><img
             src="../images/logo.png"
             alt="Craftsvilla logo"
-            srcset="" />Craftsvilla</a
+            srcset=""
+          />Craftsvilla</a
         >
       </div>
       <nav class="main-nav" aria-label="Main navigation">
@@ -38,7 +39,8 @@
             <a href="#">
               <img
                 src="../images/icons/language.png"
-                alt="Language icon" />English
+                alt="Language icon"
+              />English
             </a>
           </li>
           <li id="search">
@@ -82,7 +84,8 @@
                   id="note"
                   rows="5"
                   cols="50"
-                  placeholder="Write anything such as questions or inquiries!"></textarea>
+                  placeholder="Write anything such as questions or inquiries!"
+                ></textarea>
               </fieldset>
               <input type="button" value="Submit" />
             </form>
@@ -110,34 +113,34 @@
             <div class="column">
               <div class="attendee-card">
                 <h1>Frederick Garza</h1>
-                <p>"Incredible experience!"</p>
+                <p>"I gained valuable skills at Craftsvilla."</p>
                 <img src="../images/person/Person4.png" alt="" srcset="" />
               </div>
               <div class="attendee-card">
-                <h1>Magnus Holloway</h1>
-                <p>"I had an amazing time at Craftsvilla!"</p>
+                <h1>Nell Baldwin</h1>
+                <p>"I felt inspired throughout the event."</p>
                 <img src="../images/person/Person5.png" alt="" srcset="" />
               </div>
               <div class="attendee-card">
-                <h1>Magnus Holloway</h1>
-                <p>"I had an amazing time at Craftsvilla!"</p>
+                <h1>Sharon Bolton</h1>
+                <p>"I gained practical insights right away.""</p>
                 <img src="../images/person/Person6.png" alt="" srcset="" />
               </div>
             </div>
             <div class="column">
               <div class="attendee-card">
-                <h1>Magnus Holloway</h1>
-                <p>"I had an amazing time at Craftsvilla!"</p>
+                <h1>Scarlett Donnelly</h1>
+                <p>"I had an amazing time learning."</p>
                 <img src="../images/person/Person7.png" alt="" srcset="" />
               </div>
               <div class="attendee-card">
-                <h1>Magnus Holloway</h1>
-                <p>"I had an amazing time at Craftsvilla!"</p>
+                <h1>Lauren Wright</h1>
+                <p>"I learned so much to enhance my craft."</p>
                 <img src="../images/person/Person8.png" alt="" srcset="" />
               </div>
               <div class="attendee-card">
-                <h1>Magnus Holloway</h1>
-                <p>"I had an amazing time at Craftsvilla!"</p>
+                <h1>Danielle Adkins</h1>
+                <p>"I enjoyed meeting like-minded people."</p>
                 <img src="../images/person/Person9.png" alt="" srcset="" />
               </div>
             </div>
@@ -156,30 +159,35 @@
         <li>
           <a
             href="mailto:contact@craftsvilla.no"
-            aria-label="Craftsvilla phone number">
+            aria-label="Craftsvilla phone number"
+          >
             <img
               src="../images/icons/email.png"
-              alt="Email icon" />contact@craftsvilla.no
+              alt="Email icon"
+            />contact@craftsvilla.no
           </a>
         </li>
         <li>
           <a
             href="https://www.instagram.com"
-            aria-label="Craftsvilla instagram account">
+            aria-label="Craftsvilla instagram account"
+          >
             <img src="../images/icons/instagram.png" alt="Instagram icon" />
           </a>
         </li>
         <li>
           <a
             href="https://www.facebook.com"
-            aria-label="Craftsvilla facebook account">
+            aria-label="Craftsvilla facebook account"
+          >
             <img src="../images/icons/facebook.png" alt="Facebook icon" />
           </a>
         </li>
         <li>
           <a
             href="https://www.twitter.com"
-            aria-label="Craftsvilla twitter account">
+            aria-label="Craftsvilla twitter account"
+          >
             <img src="../images/icons/twitter.png" alt="Twitter icon" />
           </a>
         </li>
@@ -194,24 +202,3 @@
 
   <script src="../app.js"></script>
 </html>
-
-<!-- 
-Frederick Garza:
-"I gained valuable skills at Craftsvilla."
-
-Nell Baldwin:
-"I felt inspired throughout the event."
-
-Sharon Bolton:
-"I gained practical insights right away."
-
-Scarlett Donnelly:
-"I had an amazing time learning."
-
-Lauren Wright:
-"I learned so much to enhance my craft."
-
-Danielle Adkins:
-"I enjoyed meeting like-minded people."
-
--->
