--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     <link rel="stylesheet" href="global.css" />
     <title>Craftsvilla</title>
   </head>
-  <body>
+  <body id="default">
     <header>
       <div class="logo">
         <a href="./index.html"
           ><img
             src="./images/logo.png"
             alt="Craftsvilla logo"
-            srcset=""
-          />Craftsvilla</a
+            srcset="" />Craftsvilla</a
         >
       </div>
       <nav class="main-nav" aria-label="Main navigation">
@@ -32,42 +31,52 @@
         <ul class="navbar right-navbar">
           <li id="newsletter">
             <a href="#">
-              <img src="./images/icons/email.png" alt="Email icon" />Newsletter
+              <img
+                class="mode-img"
+                src="../images/icons/email-light.png"
+                alt="Email icon"
+                data-light="../images/icons/email-light.png"
+                data-dark="../images/icons/email-dark.png" />Newsletter
             </a>
           </li>
           <li id="english">
             <a href="#">
               <img
-                src="./images/icons/language.png"
-                alt="Language icon"
-              />English
+                class="mode-img"
+                src="../images/icons/language-light.png"
+                data-light="../images/icons/language-light.png"
+                data-dark="../images/icons/language-dark.png"
+                alt="Language icon" />English
             </a>
           </li>
           <li id="search">
             <a href="#">
-              <img src="./images/icons/search.png" alt="Search icon" />Search
+              <img
+                class="mode-img"
+                src="../images/icons/search-light.png"
+                alt="Search icon"
+                data-light="../images/icons/search-light.png"
+                data-dark="../images/icons/search-dark.png" />Search
             </a>
           </li>
-          <li id="light">
-            <a href="#">
-              <img src="./images/icons/light.png" alt="Light mode toggle" />
-            </a>
+          <li>
+            <a id="lightMode" aria-label="Toggle Theme">
+              <img
+                class="mode-img"
+                src="../images/icons/light.png"
+                data-light="../images/icons/light.png"
+                data-dark="../images/icons/moon.png"
+                alt="Light logo"
+            /></a>
           </li>
         </ul>
       </nav>
     </header>
     <main>
       <div class="hero-section">
-        <h1>CREATE TOGETHER.</h1>
-        <h1 class="h1-pad">GROW TOGETHER.</h1>
-        <h1>LOVE THE PROCESS!</h1>
-
-        <p>From little hands to wise minds-</p>
-        <p>Craftsvilla is your creative sanctuary.</p>
-        <p>Explore, connect, and craft memories</p>
-        <p>that last a lifetime.</p>
-
-        <button class="booking-button">BOOK YOUR FIRST SESSION</button>
+        <button class="button" onclick="location.href='./html/booking.html'">
+          BOOK YOUR FIRST SESSION
+        </button>
       </div>
       <div class="info-section center">
         <h2>What is Craftsvilla?</h2>
@@ -104,8 +113,7 @@
           src="./Craftsvilla.webm"
           type="video/webm"
           controls="play pause volume"
-          playonscroll
-        ></video>
+          playonscroll></video>
       </div>
 
       <div class="snippet-gallery center">
@@ -127,47 +135,64 @@
         </div>
       </div>
     </main>
-    <footer>
-      <ul>
+    <footer class="main-nav">
+      <ul class="navbar">
         <li>
           <a href="tel:+4791234567" aria-label="Phone number to Craftsvilla">
-            <img src="./images/icons/phone.png" alt="Phone icon" />+47 912 34
-            567
+            <img
+              class="mode-img"
+              src="../images/icons/phone-light.png"
+              alt="Phone icon"
+              data-light="../images/icons/phone-light.png"
+              data-dark="../images/icons/phone-dark.png" />+47 912 34 567
           </a>
         </li>
         <li>
           <a
             href="mailto:contact@craftsvilla.no"
-            aria-label="Craftsvilla phone number"
-          >
+            aria-label="Craftsvilla phone number">
             <img
-              src="./images/icons/email.png"
-              alt="Email icon"
-            />contact@craftsvilla.no
+              class="mode-img"
+              src="../images/icons/email-light.png"
+              data-light="../images/icons/email-light.png"
+              data-dark="../images/icons/email-dark.png"
+              alt="Email icon" />contact@craftsvilla.no
           </a>
         </li>
         <li>
           <a
             href="https://www.instagram.com"
-            aria-label="Craftsvilla instagram account"
-          >
-            <img src="./images/icons/instagram.png" alt="Instagram icon" />
+            aria-label="Craftsvilla instagram account">
+            <img
+              class="mode-img"
+              src="../images/icons/instagram-light.png"
+              alt="Instagram icon"
+              data-light="../images/icons/instagram-light.png"
+              data-dark="../images/icons/instagram-dark.png" />
           </a>
         </li>
         <li>
           <a
             href="https://www.facebook.com"
-            aria-label="Craftsvilla facebook account"
-          >
-            <img src="./images/icons/facebook.png" alt="Facebook icon" />
+            aria-label="Craftsvilla facebook account">
+            <img
+              class="mode-img"
+              src="../images/icons/facebook-light.png"
+              alt="Facebook icon"
+              data-light="../images/icons/facebook-light.png"
+              data-dark="../images/icons/facebook-dark.png" />
           </a>
         </li>
         <li>
           <a
             href="https://www.twitter.com"
-            aria-label="Craftsvilla twitter account"
-          >
-            <img src="./images/icons/twitter.png" alt="Twitter icon" />
+            aria-label="Craftsvilla twitter account">
+            <img
+              class="mode-img"
+              src="../images/icons/twitter-light.png"
+              alt="Twitter icon"
+              data-light="../images/icons/twitter-light.png"
+              data-dark="../images/icons/twitter-dark.png" />
           </a>
         </li>
         <li>
@@ -179,5 +204,5 @@
     </footer>
   </body>
 
-  <script src="modules.js"></script>
+  <script src="app.js"></script>
 </html>
